--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "socket.io": "^4.8.1",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "vercel": "^37.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
