--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.2",
     "vercel": "^37.14.0"
